Descripcion de Practicas agregada

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,17 +3,21 @@ import Social from "./Social.astro"
 ---
 
 <footer>
-  <p> Hola Mundo    [pie de pagina]</p>
-  <!-- <Social platform="GitHub" username="Ful4nito" /> -->
-  <!-- <a href="https://www.linkedin.com/in/jonathan-baez-648934281/">Linkedin</a> -->
+  <div>
+    <p>BAEZ PACHECO JONATHAN LEON</p>
+  </div>
+  <div>
+    <a href=https://github.com/Ful4nito>Github</a>
+    <a href="https://www.linkedin.com/in/jonathan-baez-648934281/">Linkedin</a>
+  </div>
 </footer>
 
 <style>
   a {
       padding: 0.2rem 1rem;
       font-weight: bold;
-      color: #EFEFEF;
-      background-color: #008bdb;
+      color: #bcd4df;
+      background-color: #4e5b66;
       text-decoration: none;
       border-radius: 2px;
       
