--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -21,13 +21,13 @@ import Layout from "../layouts/Layout.astro";
         <!-- Hola -->
         <div class="seccion">
             <h2>Robot 3lb</h2>
-            <p>El segundo es un robot de pelea de 3 libras, optimizado para competencias de combate, donde se pone
+            <p>Robot de pelea de 3 libras, optimizado para competencias de combate, donde se pone
                 a prueba la resistencia mecánica, la estrategia de diseño y el control remoto eficiente.</p>
         </div>
         <br>
         <div class="seccion">
             <h2>Sumo Autonomo</h2>
-            <p>Por último, se presenta un robot sumo autónomo, capaz de detectar y enfrentar a su oponente de
+            <p>Se presenta un robot sumo autónomo, capaz de detectar y enfrentar a su oponente de
                 manera independiente dentro de un área de combate, demostrando el uso de sensores, lógica de control
                 y toma de decisiones. Estos tres proyectos permiten explorar diferentes ramas de la robótica como
                 la mecatrónica, el control, la programación y el diseño mecánico. </p>
