--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,6 +88,9 @@ ul {
   list-style-type: none;
 }
 
+img.completa {
+  width: 100%;
+}
 
 
 
@@ -117,7 +120,7 @@ h3 {
 
 h4 {
   font-size: 1.8rem;
-  color: var(--t1-blue);
+  color: var(--t1-unfocus);
   /*border: 1px solid var(--t1-black);*/
 }
 
