--- a/src/pages/semestre2/B204/calculo-multivariable.astro
+++ b/src/pages/semestre2/B204/calculo-multivariable.astro
@@ -22,17 +22,17 @@ import Layout from "../../../layouts/Layout.astro"
                 <h4>Gradiente, Divergencia, Rotacional, y Laplaciano</h4>
                 <h3>Coordenadas Curvilineas</h3>
                 <h4>Sistemas de Coordenadas</h4>
-                <img class="completa" src="./SistemasCoordenados.png" alt="Coordenadas">
+                <img class="completa" src="/src/pages/semestre2/B204/SistemasCoordenados.png" alt="Coordenadas">
                 <h4>Coordenadas Cilindricas</h4>
                 <b>Lineas Coordenadas</b>
-                <img class="completa" src="./LineasCoordenadas_Cilindricas.png" alt="LineasCilindricas">
+                <img class="completa" src="/src/pages/semestre2/B204/LineasCoordenadas_Cilindricas.png" alt="LineasCilindricas">
                 <b>Superficies Coordenadas</b>
-                <img class="completa" src="./SuperficiesCoordenadas_Cilindricas.png" alt="SuperficiesCilindricas">
+                <img class="completa" src="/src/pages/semestre2/B204/SuperficiesCoordenadas_Cilindricas.png" alt="SuperficiesCilindricas">
                 <h4>Coordenadas Esfericas</h4>
                 <b>Lineas Coordenadas</b>
-                <img class="completa" src="./LineasCoordenadas_Esfericas.png" alt="LineasEsfericas">
+                <img class="completa" src="/src/pages/semestre2/B204/LineasCoordenadas_Esfericas.png" alt="LineasEsfericas">
                 <b>Superficies Coordenadas</b>
-                <img class="completa" src="./SuperficiesCoordenadas_Esfericas.png" alt="SuperficiesEsfericas">
+                <img class="completa" src="/src/pages/semestre2/B204/SuperficiesCoordenadas_Esfericas.png" alt="SuperficiesEsfericas">
             </div>
             <br>
             <div class="seccion">
