--- a/src/pages/biblioteca.astro
+++ b/src/pages/biblioteca.astro
@@ -10,49 +10,38 @@ import Layout from "../layouts/Layout.astro";
         <div class="hoja">
             <h1>Recursos digitales</h1>
             <div class="seccion">
-                <h2>Libros</h2>
-                <p>Explorá la colección de libros, donde encontrarás recursos técnicos, guías prácticas y material especializado en robótica, 
-                electrónica, programación y más. Perfectos para estudiantes, entusiastas y profesionales que buscan profundizar en sus conocimientos.</p>
-                
+                <h2>Matematicas</h2>
                 <div class="contenedor-grande">
                     <div class="contenedor-mediano">
-                        <h3>Matematicas</h3>
+                        <h3>Cálculo Multivaiable</h3>
                         <ul class="lista-secundaria">
-                            <li><a href="#">Libro 01</a></li>
-                            <li><a href="#">Libro 02</a></li>
-                            <li><a href="#">Libro 03</a></li>
-                            <li><a href="#">Libro 04</a></li>
-                            <li><a href="#">Libro 05</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/184399854a6e2d089876c835e2fc9adc6a8b3d70.pdf">Análisis Vectorial - Krasnov</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/653bda0d477bc9d9d8a64e3489f2cbed854b8f4f.pdf">Análisis Vectorial - Schaum</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/699e1a56a9cefc8f0d20502bd38e5bed73d79033.pdf">Análisis Vectorial - Louis Brand</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/deddeec15f8258fb045b2e8fc4d1fba050ffa3f0.pdf">Cálculo Vectorial - Susan Colley</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/b223059d5f23e58148c7e13d3709180d4f2516c9.pdf">Cálculo Vectorial - Pita Ruiz</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/bcd1328cbf7d6f3dadc021578266c240b8f17e8d.pdf">Cálculo Vectorial - Marsden</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/75609724c1a2460063cffaf73568fd58c149cfe0.pdf">Cálculo - James Stewart</a></li>
                         </ul>
                     </div>
                     <div class="contenedor-mediano">
-                        <h3>Programacion</h3>
+                        <h3>Algebra Lineal</h3>
                         <ul class="lista-secundaria">
-                            <li><a href="#">Libro 07</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/c0d263921ab5e9de017aa20ba158d8ff3eef2413.pdf">Álgebra Lineal - Howard Anton</a></li>
                             <li><a href="#">Libro 08</a></li>
                             <li><a href="#">Libro 09</a></li>
                             <li><a href="#">Libro 10</a></li>
                         </ul>
                     </div>
                     <div class="contenedor-mediano">
-                        <h3>Electronica</h3>
+                        <h3>Ecuaciones Diferenciales</h3>
                         <ul class="lista-secundaria">
-                            <li><a href="#">Libro 11</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/f9b214248be6a92014c68c659c00ef843a17a4c3.pdf">Ecuaciones Diferenciales - Dennis Zill</a></li>
                             <li><a href="#">Libro 12</a></li>
                         </ul>
                     </div>
                 </div>
 
-            </div>
-            <br>
-
-            <div class="seccion">
-                <h2>Manuales</h2>
-            </div>
-            <br>
-
-            <div class="seccion">
-                <h2>Ejercicios</h2>
             </div>
             <br>
 
