--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -11,16 +11,23 @@ import Layout from "../../../layouts/Layout.astro"
             <div class="seccion">
                 <h2>UNIDAD I</h2>
                 <b>Algoritmos Fundamentales</b>
+                <h3>Algoritmos de Ordenamiento</h3>
+                <h3>Algoritmos de Busqueda </h3>
             </div>
             <br>
             <div class="seccion">
                 <h2>UNIDAD II</h2>
                 <b>Estructuras de datos lineales</b>
+                <h3>Listas</h3>
+                <h3>Pilas</h3>
+                <h3>Colas</h3>
             </div>
             <br>
             <div class="seccion">
                 <h2>UNIDAD III</h2>
                 <b>Estructuras de datos no lineales</b>
+                <h3>Arboles</h3>
+                <h3>Grafos</h3>
             </div>
             <br>
             <div class="seccion">
