--- a/src/pages/semestre2/B203/fundamentos-de-diseño-digital.astro
+++ b/src/pages/semestre2/B203/fundamentos-de-diseño-digital.astro
@@ -28,6 +28,11 @@ import Layout from "../../../layouts/Layout.astro"
                 <b>Elementos básicos de Memoria</b>
             </div>
             <br>
+            <div class="seccion">
+                <h2>PRACTICAS</h2>
+                
+            </div>
+            <br>
         </div>
     </body>
 </Layout>
