Libros de Algebra Lineal

--- a/src/pages/biblioteca.astro
+++ b/src/pages/biblioteca.astro
@@ -16,28 +16,31 @@ import Layout from "../layouts/Layout.astro";
                         <h3>Cálculo Multivaiable</h3>
                         <ul class="lista-secundaria">
                             <li><a href="https://cdn.sanity.io/files/41gg3abp/production/184399854a6e2d089876c835e2fc9adc6a8b3d70.pdf">Análisis Vectorial - Krasnov</a></li>
-                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/653bda0d477bc9d9d8a64e3489f2cbed854b8f4f.pdf">Análisis Vectorial - Schaum</a></li>
                             <li><a href="https://cdn.sanity.io/files/41gg3abp/production/699e1a56a9cefc8f0d20502bd38e5bed73d79033.pdf">Análisis Vectorial - Louis Brand</a></li>
-                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/deddeec15f8258fb045b2e8fc4d1fba050ffa3f0.pdf">Cálculo Vectorial - Susan Colley</a></li>
-                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/b223059d5f23e58148c7e13d3709180d4f2516c9.pdf">Cálculo Vectorial - Pita Ruiz</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/653bda0d477bc9d9d8a64e3489f2cbed854b8f4f.pdf">Análisis Vectorial - Schaum</a></li>
                             <li><a href="https://cdn.sanity.io/files/41gg3abp/production/bcd1328cbf7d6f3dadc021578266c240b8f17e8d.pdf">Cálculo Vectorial - Marsden</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/b223059d5f23e58148c7e13d3709180d4f2516c9.pdf">Cálculo Vectorial - Pita Ruiz</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/deddeec15f8258fb045b2e8fc4d1fba050ffa3f0.pdf">Cálculo Vectorial - Susan Colley</a></li>
                             <li><a href="https://cdn.sanity.io/files/41gg3abp/production/75609724c1a2460063cffaf73568fd58c149cfe0.pdf">Cálculo - James Stewart</a></li>
                         </ul>
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Algebra Lineal</h3>
                         <ul class="lista-secundaria">
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/6485f73cb0f2f06a8b2f7ed9d441fe2b08b1174d.pdf">Álgebra Lineal - Friedberg</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/33c1c8bbab6f2434c96ede6e306e1d22d3cab21b.pdf">Álgebra Lineal - Hoffman</a></li>
                             <li><a href="https://cdn.sanity.io/files/41gg3abp/production/c0d263921ab5e9de017aa20ba158d8ff3eef2413.pdf">Álgebra Lineal - Howard Anton</a></li>
-                            <li><a href="#">Libro 08</a></li>
-                            <li><a href="#">Libro 09</a></li>
-                            <li><a href="#">Libro 10</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/d71e3d12f9b99e364af6e8a7c64ebbcbf4616fd6.pdf">Álgebra Lineal - Serge Lang</a></li>                            
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/626d29eeb913e606134baf7b80a0607c842382dc.pdf">Álgebra Lineal - Schaum</a></li>                            
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/fc091ee4b4a9010cfa8163108db3d85e9dd7eee3.pdf">Fundamentos de Álgebra Lineal</a></li>
+                            <li><a href="https://cdn.sanity.io/files/41gg3abp/production/1177695ff999539a9c679cbf2aab18bb5461acad.pdf">Problemas de Álgebra Lineal</a></li>
                         </ul>
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Ecuaciones Diferenciales</h3>
                         <ul class="lista-secundaria">
                             <li><a href="https://cdn.sanity.io/files/41gg3abp/production/f9b214248be6a92014c68c659c00ef843a17a4c3.pdf">Ecuaciones Diferenciales - Dennis Zill</a></li>
-                            <li><a href="#">Libro 12</a></li>
+                            <li><a href="#">Libro 16</a></li>
                         </ul>
                     </div>
                 </div>
